Use nicer import path

--- a/go/mc/Makefile
+++ b/go/mc/Makefile
@@ -7,7 +7,7 @@ all: src/example/*.go
 	@GOPATH=$(CURDIR) go build example
 
 deps:
-	@GOPATH=$(CURDIR) go get github.com/memcachier/mc/src/mc
+	@GOPATH=$(CURDIR) go get github.com/memcachier/mc
 
 run:
 	MEMCACHIER_USERNAME=$(U) MEMCACHIER_PASSWORD=$(P) MEMCACHIER_SERVERS=$(S) ./example
